--- a/src/Main.css
+++ b/src/Main.css
@@ -1,3 +1,15 @@
+#logo > h1 {
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+hr {
+    border: 1px solid hsl(257, 7%, 63%);
+    width: 2%;
+}
+
 .brand-promise {
     background-image: url("./illustration-working.svg");
     background-repeat: no-repeat;
@@ -11,6 +23,20 @@
     align-items: center;
     flex-direction: column;
     padding: 2rem;
+}
+
+.list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.list > a {
+    text-decoration: none;
+    color: hsl(257, 7%, 63%);
+    font-family: Poppins;
+    font-weight: 500;
 }
 
 #tagline {
@@ -45,36 +71,53 @@
     display: inline;
     position: relative;
     bottom: 3rem;
+
+    position: relative;
+    left: 2rem;
 }
 
-@media only screen and (max-width: 1024px) {
-    .brand-promise {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 2rem;
+/* Media Queries */
+
+@media only screen and (max-width: 468px) {
+
+    #logo {
+        border-bottom: 1px solid hsl(257, 7%, 63%);
     }
 
-    #tagline {
+    .list > a {
+        display: none;
+    }
+
+    .more-than > .brand-promise > #tagline {
         font-size: 2rem;
         text-align: center;
         width: 100%;
+        padding-right: 1rem;
     }
 
-    #tagline-2 {
+    .more-than > .brand-promise > #tagline-2 {
         font-size: 1rem;
         text-align: center;
         width: 100%;
-    }
 
-    #get-started {
         position: relative;
         bottom: 0;
+
+        margin-bottom: 2rem;
+    }
+
+    br {
+        display: none;
+    }
+
+    .container > .more-than > #get-started {
+        position: relative;
+        left: 7.5rem;
     }
 }
 
-@media only screen and (max-width: 1024px) {
-    /* .brand-promise {
+@media only screen and (max-width: 768px) {
+    .brand-promise {
         background-image: url("./illustration-working.svg");
         background-size: 100%;
         background-position: center;
@@ -83,12 +126,13 @@
         justify-content: center;
         align-items: center;
         padding: 2rem;
-    } */
+    }
 
     #tagline {
         font-size: 2rem;
         text-align: center;
         width: 100%;
+        margin-bottom: 3rem;
     }
 
     #tagline-2 {
@@ -98,23 +142,12 @@
     }
 
     #get-started {
-        position: relative;
-        bottom: 2rem;
-        left: 30%;
-    }
-
-    .login {
         display: none;
     }
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1440px) {
-    .brand-promise {
-        background-size: 30%;
-    }
-}
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1024px) {
     .brand-promise {
         background-image: none;
         flex-direction: column;
@@ -127,9 +160,22 @@
         font-size: 2rem;
         text-align: center;
         width: 100%;
+        margin-bottom: 3rem;
     }
 
+    #tagline-2 {
+        font-size: 1rem;
+        text-align: center;
+        width: 100%;
+    }
+
+    
+
     .login {
+        display: none;
+    }
+
+    #get-started {
         display: none;
     }
 }
